--- a/amazon bot/templates/index.html
+++ b/amazon bot/templates/index.html
@@ -1427,7 +1427,7 @@
         <!-- Chatbox -->
         <div id="chat-widget" class="card position-fixed shadow d-none" style="z-index: 10000; bottom: 100px; right: 20px; width: 500px;">
             <div class="card-header bg-primary text-white">
-                Chatbot
+                Alex, your shopping buddy
                 <button id="chat-widget-close-button" type="button" class="btn-close float-end" aria-label="Close"></button>
             </div>
             <div class="card-body" id="chat-widget-messages" style="z-index: 10000; max-height: 500px; overflow: auto;">
